<resources>
    <string-array name="hair_colors">
        <item>Auburn</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Blond</item>
        <item>Chestnut</item>
        <item>Ginger</item>
        <item>Gray</item>
        <item>White</item>
        <item>Other</item>
    </string-array>
    <string-array name="eye_colors">
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Hazel</item>
        <item>Violet</item>
        <item>Green</item>
    </string-array>
    <string-array name="body_types">
        <item>Toned</item>
        <item>Slim</item>
        <item>Muscular</item>
        <item>Beefy</item>
        <item>Average</item>
        <item>Hairy</item>
        <item>Shaved</item>
        <item>Smooth</item>
        <item>Stocky</item>
        <item>Athletic</item>
        <item>Large</item>
    </string-array>
    <string name="sexuality">Sexuality</string>
    <string name="ethentity">Ethnicity</string>
    <string name="massage_types">Massage Types:</string>
    <string-array name="states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
        <item>AS</item>
        <item>DC</item>
        <item>FM</item>
        <item>GU</item>
        <item>MH</item>
        <item>MP</item>
        <item>PW</item>
        <item>PR</item>
        <item>VI</item>
        <item>AE</item>
        <item>AA</item>
        <item>AE</item>
        <item>AE</item>
        <item>AE</item>
        <item>AP</item>
    </string-array>
    <string name="aviary_key">18d9a94cf8a7125f</string>
    <string name="aviary_secret">65dee2c76a62e2c7</string>
    <string name="fb_app_id">1531252457117882</string>
    <string name="app_name">Handy Boy</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="file_size_more_than_10_mb">The file size exceeds 10 mb</string>
    <string name="error">Error</string>
    <string name="signin">Sign-In</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="learn_more">Learn More</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign-Up</string>
    <string name="back">back</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="accept">Accept</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="your_must_accept_our_terms_of_service_and_privacy_policy">"Your must accept our terms of service and Privacy Policy "</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="mobile_verification_text">We need to verify your mobile number for security reasons. We absolutely never share or sell your data.</string>
    <string name="send_phone_verification">SEND PHONE VERIFICATION</string>
    <string name="first_name_is_empty">First name is empty</string>
    <string name="enter_your_code_here">Enter your code here</string>
    <string name="code">Code</string>
    <string name="registration">REGISTRATION</string>
    <string name="please_enter_code">Please enter code</string>
    <string name="loading">Loading</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="restore_password">Restore password</string>
    <string name="restore_password_text_1">Please enter Your Email address to retrieve password</string>
    <string name="forgot_password_text_2">When you press the \"Restore\" button. You will receive a new password to your email</string>
    <string name="restore">RESTORE</string>
    <string name="password_successfully_restored_please_check_your_email">Password successfully restored, please check your email</string>
    <string name="looking_to">Looking to</string>
    <string name="hire">Hire?</string>
    <string name="here_to_work">Here to Work?</string>
    <string name="here_to">Here to</string>
    <string name="work_h">Work?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="youtube_link">Youtube link</string>
    <string name="http">http://</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="retrieve">RETRIEVE</string>
    <string name="weight">Weight</string>
    <string name="hair_color">Hair Color</string>
    <string name="eye_color">Eye Color</string>
    <string name="body_type">Body Type</string>
    <string name="location">Location</string>
    <string name="select_job">Select job</string>
    <string name="why_you_handy_boy">Why do you want to be a HandyBoy</string>
    <string name="why_you_handy_boy_hint">Please detail your work experience and background (this information is just for us and won’t be posted on your profile)</string>
    <string name="save_information">Save Information</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="all">All</string>
    <string name="what_is_your_body">What is your body?</string>
    <string name="what_is_your_sexuality">What is your sexuality?</string>
    <string name="what_is_your_ethentity">What is your ethentity?</string>
    <string name="what_is_your_jobs">Please select you jobs</string>
    <string name="what_is_your_location">What is your location?</string>
    <string name="null_value">null value</string>
    <string name="job_description">Job Description</string>
    <string name="next">NEXT</string>
    <string name="details">Details</string>
    <string name="details_qustion">Details?</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="you_must_be_insured_to_perform_this_service">You must be insured to perform this service*</string>
    <string name="upload_proof_of_current_personal_trainers_insurance">Upload proof file insurance (Min 500k)</string>
    <string name="choose_file">CHOOSE FILE</string>
    <string name="must_be_pdf_or_jpeg">(Must be PDF or JPEG)</string>
    <string name="no_file">No File</string>
    <string name="what_will_you_charge">"What will you charge? "</string>
    <string name="you_can_customize_this_at_any_time">You can customize this at any time</string>
    <string name="total">Total</string>
    <string name="price_per_hour">Price per Hour</string>
    <string name="we_suggest_anywhere_between">We suggest anywhere between</string>
    <string name="describe_your_services">Describe your services</string>
    <string name="describe_your_services_hint">Tell us about you - have fun and be yourself. This is the first thing a potential client will read about you! (300 characters max)</string>
    <string name="internet_connection_exception">Internet connection exception</string>
    <string name="choose_job_type">Choose job type</string>
    <string name="full_name">- Full Name</string>
    <string name="city">- City</string>
    <string name="state">- State</string>
    <string name="license_number">- License number</string>
    <string name="license">License</string>
    <string name="credit_card">Credit Card</string>
    <string name="my_visa">My VISA</string>
    <string name="visas_name">Visa\'s name</string>
    <string name="visas_number_hint">xxxx-xxxx-xxxx-xxxx</string>
    <string name="visas_number">Visa\'s number</string>
    <string name="date">Date</string>
    <string name="date_hint">12/16</string>
    <string name="cvv2_code">CVV2 code</string>
    <string name="cvv2_code_hint">123</string>
    <string name="not_implemented">Not implemented</string>
    <string name="no_data">No data</string>
    <string name="i_need_a">I Need a...</string>
    <string name="party">PARTY</string>
    <string name="boy">BOY</string>
    <string name="home">HOME</string>
    <string name="home_lower">Home</string>
    <string name="work">Work</string>
    <string name="add_address">+Add New Address</string>
    <string name="muscle">MUSCLE</string>
    <string name="pretty">PRETTY</string>
    <string name="_for">For:</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="type_your_text_here">Type yout text here...</string>
    <string name="message_is_empty">Message is empty</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="im_available_now">I\'m Available Now!</string>
    <string name="free_to_work_for_the_next_3_hours">Free to work for the next 3 hours</string>
    <string name="gig_list">Gig List</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="cuctom_schedule">Custom Schedule</string>
    <string name="your_money">Your Money</string>
    <string name="job_descriptions">Job Descriptions</string>
    <string name="your_sms_limit_per_day_is_maxed">Your sms limit per day is maxed</string>
    <string name="selphie">Selfie</string>
    <string name="have_fun_and_be_yourself">This will not show up on \n your profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="available_dialog_title">Do you wish to proceed?</string>
    <string name="available_dialog_body">By clicking yes you accept the terms of available now and want to be on call for the next three hours.</string>
    <string name="okay">Okay!</string>
    <string name="cancel">Cancel</string>
    <string name="book_another">Book another</string>
    <string name="handyboy">HANDYBOY</string>
    <string name="right_now">RIGHT NOW!</string>
    <string name="at_discount">at discount</string>
    <string name="finish">Finish</string>
    <string name="add_youtube_video_title">Add a YouTube video?</string>
    <string name="add_youtube_sub_video_title">(<u>check video guidelines here)</u></string>
    <string name="ok">Ok</string>
</resources>