<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:clickable="false" >

    <RelativeLayout
        android:id="@+id/topbarContainer"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/red" >

        <TextView
            android:id="@+id/screenTextView"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/credit_card"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:padding="8dp"
            android:src="@drawable/back_icon_topbar" />

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/backImageView"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_below="@+id/topbarContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/edit_text_selector"
        android:ems="10"
        android:hint="@string/my_visa"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/text_hint"
        android:textSize="17sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/topbarContainer"
        android:layout_marginTop="39dp"
        android:text="@string/visas_name"
        android:textColor="@color/dark_blue"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="21dp"
        android:text="@string/visas_number"
        android:textColor="@color/dark_blue"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:background="@drawable/edit_text_selector"
        android:ems="10"
        android:hint="@string/visas_number_hint"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/text_hint"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_below="@+id/EditText01"
        android:layout_marginTop="21dp"
        android:text="@string/date"
        android:textColor="@color/dark_blue"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:background="@drawable/edit_text_selector"
        android:ems="10"
        android:hint="@string/date_hint"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/text_hint"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EditText02"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/EditText02"
        android:text="@string/cvv2_code"
        android:textColor="@color/dark_blue"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/EditText03"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_alignBaseline="@+id/EditText02"
        android:layout_alignBottom="@+id/EditText02"
        android:layout_alignLeft="@+id/TextView02"
        android:background="@drawable/edit_text_selector"
        android:ems="10"
        android:hint="@string/cvv2_code_hint"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/text_hint"
        android:textSize="17sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="221dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:background="@drawable/dark_blue_shape_selector"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignRight="@+id/EditText03"
        android:layout_below="@+id/EditText03"
        android:layout_marginTop="21dp"
        android:background="@drawable/red_shape_selector"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="13sp" />

</RelativeLayout>