<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_semi_alpha"
    android:clickable="false"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/customerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/looking_to"
            android:textColor="@color/dark_blue"
            android:textSize="21sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/hire"
            android:textColor="@color/dark_blue"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/workerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/here_to"
            android:textColor="@color/dark_blue"
            android:textSize="21sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/work_h"
            android:textColor="@color/dark_blue"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>