<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:clickable="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topbarContainer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/red" >

        <TextView
            android:id="@+id/screenTextView"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:padding="8dp"
            android:src="@drawable/back_icon_topbar" />

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/backImageView"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/book_another"
            android:textColor="@color/dark_blue"
            android:textSize="29sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/handyboy"
            android:textColor="@color/dark_blue"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/right_now"
            android:textColor="@color/dark_blue"
            android:textSize="43sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/at_discount"
            android:textColor="@color/dark_blue"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/isLateButton"
            android:layout_width="221dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:background="@drawable/dark_blue_shape_selector"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/white_arrow_schedule_right"
            android:gravity="center"
            android:text="@string/okay"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="57dp"
            android:background="@drawable/red_shape_selector"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="15dp"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>