<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_round_rect"
    android:orientation="vertical"
    android:paddingTop="12dp" >

    <TextView
        android:id="@+id/dialogTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/available_dialog_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialogBodyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/available_dialog_body"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialogNoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/available_dialog_buttons_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialogYesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/available_dialog_buttons_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/yes"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>