<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".TutorialWelcomeViewFragment" >

    <RelativeLayout
        android:id="@+id/topbarContainer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/red" >

        <TextView
            android:id="@+id/screenTextView"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/selphie"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:padding="8dp"
            android:src="@drawable/back_icon_topbar" />

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/backImageView"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/selphieImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/selphie_image_selector" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/have_fun_and_be_yourself"
        android:textColor="@color/dark_grey"
        android:textSize="23sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="221dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="34dp"
        android:background="@drawable/dark_blue_shape_selector"
        android:text="@string/next"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>